--- a/.env
+++ b/.env
@@ -9,4 +9,7 @@ JWT_SECRET_KEY=sdaBtyGUVC&^G&^%FUGH&UIT897hdshfas
 SMTP_HOST="smtp.gmail.com"
 SMTP_PORT=587
 SMTP_USER=danil.snip@gmail.com
-SMTP_PASSWORD=3hsdjkfh8973241
+SMTP_PASSWORD="jdgc lith yvyh frwv"
+PAYME_KEY=or8TbeZZ?OQUFoPzKrQYHQMO2oci4@F5NOw0
+CLIENT_VERIFY_LINK=http://localhost:5000/user/profile
+SERVER_VERIFY_LINK=http://localhost:5000/server-api/user/active-account
