--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "Daniel Sabitov <danil.snip@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.7",
+    "base-64": "^1.0.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -29,6 +31,7 @@
     "postgres": "^3.4.4",
     "sequelize": "^6.37.3",
     "swagger": "^0.7.5",
+    "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^10.0.0"
   }
