--- a/.env
+++ b/.env
@@ -11,5 +11,6 @@ SMTP_PORT=587
 SMTP_USER=danil.snip@gmail.com
 SMTP_PASSWORD="jdgc lith yvyh frwv"
 PAYME_KEY=or8TbeZZ?OQUFoPzKrQYHQMO2oci4@F5NOw0
+WAITING_TRANSACTIONS_MINUTES=10
 CLIENT_VERIFY_LINK=http://localhost:5000/user/profile
 SERVER_VERIFY_LINK=http://localhost:5000/server-api/user/active-account
