--- a/package.json
+++ b/package.json
@@ -14,16 +14,20 @@
   "author": "Daniel Sabitov <danil.snip@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "@types/jsrsasign": "^10.5.14",
     "axios": "^1.7.7",
     "base-64": "^1.0.0",
     "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.2",
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "express": "^4.21.0",
     "express-csrf": "^0.3.4",
     "jsonwebtoken": "^9.0.2",
+    "jsrsasign": "^9.1.0",
     "multer": "^1.4.5-lts.1",
+    "node-telegram-bot-api": "^0.66.0",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4",
     "pg": "^8.12.0",
