deploy without payme

--- a/.env
+++ b/.env
@@ -13,11 +13,11 @@ SMTP_PASSWORD="jdgc lith yvyh frwv"
 ZOOM_CLIENT_ID=XHjODJJCSwy1a3jRNTbxsA
 ZOOM_ACCOUNT_ID=EFM4mnZqTImzC2ivBRVlmg
 ZOOM_CLIENT_SECRET=NLscLGWf5g2y8koZjPO88PlRon4czBT4
-ZOOM_REDIRECT_OAUTH_LINK=http://localhost:5000/server-api/zoom-sessions/auth
+ZOOM_REDIRECT_OAUTH_LINK=http://185.170.196.41:5000/server-api/zoom-sessions/auth
 ZOOM_DEFAULT_LINK=https://api.zoom.us/v2
 PAYME_KEY=or8TbeZZ?OQUFoPzKrQYHQMO2oci4@F5NOw0
 WAITING_TRANSACTIONS_MINUTES=10
-CLIENT_VERIFY_LINK=http://localhost:5000/user/profile
-SERVER_VERIFY_LINK=http://localhost:5000/server-api/user/active-account
+CLIENT_VERIFY_LINK=http://localhost:5173/user/profile
+SERVER_VERIFY_LINK=http://185.170.196.41:5000/server-api/user/active-account
 TELEGRAM_TOKEN=7510464705:AAGw0t7QpCH37UmdX7Ni7-PJmERjUEbCqyA
 TELEGRAM_CHAT_ID=-4581348881
