--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,48 +1,84 @@
-version: "3"
+version: "3.11"
+
 services:
   app:
-    container_name: express-app
     build: .
     ports:
       - "5000:5000"
+    container_name: Courses
     environment:
-      - PORT=5000
-      - DB_SERVERNAME=postgres
-      - DB_PASSWORD=149978675409hjk09
-      - DB_NAME=courses
-      - DB_HOST=postgres
-      - DB_PORT=5432
-      - HASH_ROUNDS=10
-      - JWT_SECRET_KEY=sdaBtyGUVC&^G&^%FUGH&UIT897hdshfas
-      - SMTP_HOST=smtp.gmail.com
-      - SMTP_PORT=587
-      - SMTP_USER=danil.snip@gmail.com
-      - SMTP_PASSWORD=jdgc lith yvyh frwv
-      - ZOOM_CLIENT_ID=XHjODJJCSwy1a3jRNTbxsA
-      - ZOOM_ACCOUNT_ID=EFM4mnZqTImzC2ivBRVlmg
-      - ZOOM_CLIENT_SECRET=NLscLGWf5g2y8koZjPO88PlRon4czBT4
-      - ZOOM_REDIRECT_OAUTH_LINK=http://localhost:5000/server-api/zoom-sessions/auth
-      - ZOOM_DEFAULT_LINK=https://api.zoom.us/v2
-      - PAYME_KEY=or8TbeZZ?OQUFoPzKrQYHQMO2oci4@F5NOw0
-      - WAITING_TRANSACTIONS_MINUTES=10
-      - CLIENT_VERIFY_LINK=http://localhost:5000/user/profile
-      - SERVER_VERIFY_LINK=http://localhost:5000/server-api/user/active-account
-      - TELEGRAM_TOKEN=7510464705:AAGw0t7QpCH37UmdX7Ni7-PJmERjUEbCqyA
-      - TELEGRAM_CHAT_ID=-4581348881
+      - NODE_ENV=development
+      - DB_HOST=${DB_SERVERNAME} 
+      - DB_USER=${DB_USER}
+      - DB_PASSWORD=${DB_PASSWORD}
+      - DB_NAME=${DB_NAME}
+      - DB_PORT=${DB_PORT}
+      - HASH_ROUNDS=${HASH_ROUNDS}
+      - JWT_SECRET_KEY=${JWT_SECRET_KEY}
+      - SMTP_HOST=${SMTP_HOST}
+      - SMTP_PORT=${SMTP_PORT}
+      - SMTP_USER=${SMTP_USER}
+      - SMTP_PASSWORD=${SMTP_PASSWORD}
+      - ZOOM_CLIENT_ID=${ZOOM_CLIENT_ID}
+      - ZOOM_ACCOUNT_ID=${ZOOM_ACCOUNT_ID}
+      - ZOOM_CLIENT_SECRET=${ZOOM_CLIENT_SECRET}
+      - ZOOM_REDIRECT_OAUTH_LINK=${ZOOM_REDIRECT_OAUTH_LINK}
+      - ZOOM_DEFAULT_LINK=${ZOOM_DEFAULT_LINK}
+      - PAYME_KEY=${PAYME_KEY}
+      - WAITING_TRANSACTIONS_MINUTES=${WAITING_TRANSACTIONS_MINUTES}
+      - CLIENT_VERIFY_LINK=${CLIENT_VERIFY_LINK}
+      - SERVER_VERIFY_LINK=${SERVER_VERIFY_LINK}
+      - TELEGRAM_TOKEN=${TELEGRAM_TOKEN}
+      - TELEGRAM_CHAT_ID=${TELEGRAM_CHAT_ID}
+    volumes: 
+      - .:/app
+      - /app/node_modules
+      - ./uploads:/app/uploads 
     depends_on:
       - postgres
+    user: "root"
 
+  
+  nginx:
+    image: nginx:latest
+    restart: always
+    ports:
+      - '80:80'
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      - app
+  
   postgres:
-    container_name: postgres-db
     image: postgres:13
+    restart: always
+    env_file: .env
     environment:
-      POSTGRES_DB: courses
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: 149978675409hjk09
+      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
     ports:
       - "5432:5432"
     volumes:
       - postgres-data:/var/lib/postgresql/data
 
+  redis:
+    image: redis:7.0.0-alpine
+    restart: always
+    ports:
+      - "6379:6379"
+
+  migrate:
+    build: .
+    volumes:
+      - '.:/app'
+      - /app/node_modules
+    command: npm run seeders
+    depends_on:
+      - postgres
+      - app
+
 volumes:
-  postgres-data:
+  postgres-data: null
+  redis-data: null
+
