--- a/nginx.conf
+++ b/nginx.conf
@@ -1,15 +1,25 @@
 server {
-    listen 80;
+    listen 443 ssl;  # Порт 443 для HTTPS
+    server_name api.startit.uz;
 
-    server_name your_domain_or_ip;
+    ssl_certificate /etc/ssl/certs/your_cert.pem;  # Путь к вашему сертификату
+    ssl_certificate_key /etc/ssl/private/your_cert_key.pem;
 
     client_max_body_size 500M;  # Устанавливаем лимит на 500 МБ
 
     location / {
-        proxy_pass http://app:5000;
+        proxy_pass http://app:5000;  # Прокси на внутренний порт 5000
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
+}
+
+server {
+    listen 80;
+    server_name api.startit.uz;
+
+    # Перенаправляем все HTTP-запросы на HTTPS
+    return 301 https://$host$request_uri;
 }
